--- a/view/login.ejs
+++ b/view/login.ejs
@@ -36,6 +36,8 @@
 
           <!-- 去掉 onclick 事件，type 设置为 submit -->
           <button class="btn btn-primary" id="loginBtn" type="submit">Login</button>
+          <div class="register-link">Don't have an account?<a href="/register"> Register</a>
+</div>
 
           
 
