--- a/view/main.ejs
+++ b/view/main.ejs
@@ -87,6 +87,7 @@
       transition: transform .02s ease, box-shadow .2s, background .2s, color .2s;
       user-select:none;
       white-space:nowrap;
+text-decoration: none;
     }
     .btn:active{ transform: translateY(1px); }
     .btn-secondary{
@@ -384,6 +385,7 @@ white-space: pre-wrap;
 
 </body>
 </html>
+
 
 
 
