--- a/public/css/login.css
+++ b/public/css/login.css
@@ -28,11 +28,17 @@ body{
 
 /* 整体布局 */
 .app{
-  min-height:100%;
+  height:70%;
   display:flex;
   flex-direction:column;
   align-items:center;
   padding-top:20px;
+  border: 1px solid #ccc; 
+  border-radius: 10px;    
+  width: 800px; 
+  background: #fff;
+  margin-bottom: 200px;            
+  box-shadow: 0 2px 6px rgba(0,0,0,0.1);
 }
 .phone{
   width:100%;
