--- a/view/main.ejs
+++ b/view/main.ejs
@@ -260,7 +260,7 @@ white-space: pre-wrap;
   <aside class="sidebar">
     <div class="brand">
   <% if (typeof displayName !== 'undefined' && displayName) { %>
-    <strong>Hi <%= displayName %>, welcome to HealthyPal</strong>
+    <strong>Hi <%= username %>, welcome to HealthyPal</strong>
   <% } else { %>
     HealthyPal
   <% } %>
