--- a/view/bodyInfoForm.ejs
+++ b/view/bodyInfoForm.ejs
@@ -61,9 +61,8 @@
          <label for="goal">Goal</label>
           <select id="goal" name="goal" required>
           <option value="" >Please choose</option>
-          <option value="" >Maintain weight</option>
           <option value="Lose fat">Lose fat</option>
-          <option value="" >Maintain weight</option>
+          <option value="Maintain" >Maintain weight</option>
           <option value="Gain muscle / weight">Gain muscle / weight</option>
           </select>
         </div>
