--- a/public/css/newPost.css
+++ b/public/css/newPost.css
@@ -81,28 +81,28 @@
       cursor: pointer;
     }
     .btn-secondary { 
-      background: #ffffff;          /* 默认白底 */
-    color: #6b7280;               /* 深灰字 */
+    background: #6b7280;          /* hover → 灰底 */
+    color: #ffffff;              /* 深灰字 */
     border: 2px solid #6b7280;    /* 灰色边框 */
     border-radius: 10px;
     transition: all 0.2s ease; 
   }
     .btn-secondary:hover {
-    background: #6b7280;          /* hover → 灰底 */
-    color: #ffffff;               /* hover → 白字 */
+    background: #ffffff;          /* 默认白底 */
+    color: #6b7280;               /* hover → 白字 */
     border: 2px solid #6b7280;    /* 灰边维持 */
     cursor: pointer;
     }
 
     .btn-primary {
-      background: #ffffff;          /* 默认白底 */
-      color: #3b82f6;               /* 蓝字 */
+      background: #3b82f6;          /* hover → 变蓝底 */
+      color: #ffffff;  
       border: 2px solid #3b82f6;    /* 蓝色边框 */
       transition: all .2s ease;
       transition: background-color .25s ease, color .25s ease, border-color .25s ease; }
   .btn-primary:hover {
-      background: #3b82f6;          /* hover → 变蓝底 */
-      color: #ffffff;               /* 变白字 */
+     background: #ffffff;          /* 默认白底 */
+      color: #3b82f6;           /* 变白字 */
       border: 2px solid #3b82f6;    /* 维持蓝边 */
 }
     .btn:active { transform: translateY(1px); }
