--- a/view/main.ejs
+++ b/view/main.ejs
@@ -98,10 +98,8 @@ text-decoration: none;
       background:#dfe3e8;
     }
     .btnprimary{
-    background:#fff;  
-    color:#3b82f6;    
-    border:2px solid #3b82f6; 
-    
+    background:#3b82f6;               /* 白底 */
+    color:#fff;
     box-shadow:0 10px 24px rgba(10,102,255,.08);;
     padding:6px 10px;
     border-radius:6px;
@@ -110,8 +108,10 @@ text-decoration: none;
     text-decoration:none;
     }
     .btnprimary:hover{ 
-     background:#3b82f6;               /* 白底 */
-    color:#fff;            /* 蓝字 */
+        background:#fff;  
+        color:#3b82f6;    
+        border:2px solid #3b82f6; 
+            /* 蓝字 */
      /* 有边框更像“线性按钮” */               
     box-shadow:0 16px 32px rgba(10,102,255,.35);
     transform:translateY(-1px);}
